--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="semicolon">:</string>
     <string name="start_game">Start Game</string>
     <string name="no_time">00</string>
+    <string name="min">01</string>
 
     <string-array name="card_type_array">
         <item>True/False</item>
