--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="start_game">Start Game</string>
     <string name="no_time">00</string>
     <string name="min">01</string>
+    <string name="card_count">Card Count:</string>
+    <string name="card_time">Card Time:</string>
+    <string name="three_secs">03</string>
 
     <string-array name="card_type_array">
         <item>True/False</item>
