--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="card_time">Card Time:</string>
     <string name="three_secs">03</string>
     <string name="new_game">New Game</string>
+    <string name="join_game">Join Game</string>
     <string name="game_over">Game Over</string>
     <string name="main_menu">Main Menu</string>
 
