--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,19 @@
     <string name="game_over">Game Over</string>
     <string name="main_menu">Main Menu</string>
 
+    <string name="p2p_off_warning">P2P is disabled</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
+    <string name="empty" />
+    <string name="group_owner_text">"Am I the Group Owner?"</string>
+    <string name="client_text">This device will act as a client. Click on Start Chatting button</string>
+    <string name="connect_peer_button">Connect</string>
+    <string name="disconnect_peer_button">Disconnect</string>
+    <string name="start_chat_button">Start Chatting</string>
+    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
+    <string name="label_me">ME</string>
+    <string name="label_peers">PEERS</string>
+
     <string-array name="card_type_array">
         <item>True/False</item>
         <item>Multiple Choice</item>
