--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,9 +35,9 @@
     <string name="connect_peer_button">Connect</string>
     <string name="disconnect_peer_button">Disconnect</string>
     <string name="start_chat_button">Start Chatting</string>
-    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
-    <string name="label_me">ME</string>
-    <string name="label_peers">PEERS</string>
+    <string name="empty_message">No devices found. Make sure P2P is enabled.</string>
+    <string name="label_me">Me</string>
+    <string name="label_peers">Players</string>
 
     <string-array name="card_type_array">
         <item>True/False</item>
