--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="client_text">This device will act as a client. Click on Start Chatting button</string>
     <string name="connect_peer_button">Connect</string>
     <string name="disconnect_peer_button">Disconnect</string>
-    <string name="start_chat_button">Start Chatting</string>
+    <string name="start_chat_button">Send Message</string>
     <string name="empty_message">No devices found. Make sure P2P is enabled.</string>
     <string name="label_me">Me</string>
     <string name="label_peers">Players</string>
