--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     </string-array>
 
     <string name="wifi_direct_disabled">WiFi Direct Disabled, please re-enable.</string>
+    <string name="host_game_game_settings">Game Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
