--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="Delete">Delete</string>
+    <string name="select_deck">Select Deck:</string>
 </resources>
