--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,12 @@
     <string name="cancel">Cancel</string>
     <string name="Delete">Delete</string>
     <string name="select_deck">Select Deck:</string>
+
+    <string name="type">Type</string>
+    <string name="points">Points</string>
+    <string name="answer">Answer</string>
+
+    <string name="_true">True</string>
+    <string name="_false">False</string>
+
 </resources>
