--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,10 @@
     <string name="nav_bar_edit_cards">Edit Cards</string>
     <string name="next_card">Next Card:</string>
     <string name="shuffle">Shuffle</string>
+    <string name="score_label">Score:</string>
+    <string name="total_cards_label">Total Cards:</string>
+    <string name="high_score_label">High Score:</string>
+    <string name="high_score_time_label">High Score Time:</string>
+    <string name="time_elapsed_label">Time Elapsed:</string>
 
 </resources>
