got question and answers to stay the width, points keeps fucking thing up and stretching the layout though.... not sure what is going on. will need to look into later

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
 
     <string name="correct_answer">Answer</string>
     <string name="wrong_answer">Wrong</string>
+    <string name="default_card_points">1</string>
 
 </resources>
