--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Quizinator</string>
 
-    <string name="game_time">Game Time:</string>
-    <string name="card_type">Card Type(s):</string>
+    <string name="game_time">Game Time</string>
+    <string name="card_type">Card Type(s)</string>
     <string name="semicolon">:</string>
     <string name="start_game">Start Game</string>
     <string name="no_time">00</string>
@@ -13,8 +13,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="quiz_bowl_rules">Quiz Bowl Rules</string>
-    <string name="card_count">Card Count:</string>
-    <string name="card_time">Card Time:</string>
+    <string name="card_count">Card Count</string>
+    <string name="card_time">Card Time</string>
     <string name="three_secs">10</string>
 
     <string name="new_game">New Game</string>
@@ -69,7 +69,7 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="Delete">Delete</string>
-    <string name="select_deck">Select Deck:</string>
+    <string name="select_deck">Select Deck</string>
 
     <string name="type">Type</string>
     <string name="points">Points</string>
