--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="nav_bar_check_p2p_compliance">Check P2P Compatibility</string>
     <string name="nav_bar_edit_decks">Edit Decks</string>
     <string name="nav_bar_edit_cards">Edit Cards</string>
-    <string name="next_card">Next Card:</string>
+    <string name="next_card">Next Card</string>
     <string name="shuffle">Shuffle</string>
     <string name="score_label">Score:</string>
     <string name="total_cards_label">Total Cards:</string>
@@ -92,5 +92,7 @@
     <string name="correct_answer">Answer</string>
     <string name="wrong_answer">Wrong</string>
     <string name="default_card_points">1</string>
+    <string name="current_card">Current Card</string>
+    <string name="correct_answer_label">Correct Answer</string>
 
 </resources>
