--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="send_card">Send Card</string>
-    <string name="double_edge">Double Points!</string>
+    <string name="double_edge">High Risk!</string>
     <string name="end_game">End Game</string>
     <string name="question">Question</string>
     <string name="double_edge_notifier">High Risk!</string>
