--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,9 +89,8 @@
     <string name="nav_bar_edit_cards">Edit Cards</string>
     <string name="nav_bar_help">Help</string>
     <string name="nav_bar_help_singleplayer">Singleplayer</string>
-    <string name="nav_bar_help_multi">Multiplayer</string>
-    <string name="nav_bar_help_multi_host">Host</string>
-    <string name="nav_bar_help_multi_player">Player</string>
+    <string name="nav_bar_help_multi_host">Multiplayer: Host</string>
+    <string name="nav_bar_help_multi_player">Multiplayer: Player</string>
     <string name="nav_bar_help_custom">Decks and Cards</string>
     <string name="nav_bar_help_rules">Advanced Rules</string>
     <string name="next_card">Next Card</string>
