working on the sorting of cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,11 @@
         <item>Both</item>
     </string-array>
 
+    <string-array name="card_sort_list">
+        <item>Question</item>
+        <item>Points</item>
+    </string-array>
+
     <string name="wifi_direct_disabled">WiFi Direct Disabled, please re-enable.</string>
     <string name="host_game_game_settings">Game Settings</string>
 
