sort by points and questions works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="results">Results</string>
     <string name="main_menu">Main Menu</string>
 
-    <string name="enabling_wifi">Enabling Wifi...</string>
+    <string name="enabling_wifi">Enabling Wifi…</string>
     <string name="p2p_off_warning">P2P is disabled</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
@@ -48,7 +48,9 @@
         <item>Both</item>
     </string-array>
 
+
     <string-array name="card_sort_list">
+        <item>Sort by…</item>
         <item>Question</item>
         <item>Points</item>
     </string-array>
