went through all of the xml layouts and made sure that we were using the predefined values for dimen and string where it could be used. Left some alone that I felt could be left alone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,5 +130,8 @@
     <string name="wager_final_question">Wager Final Question</string>
     <string name="allow_multiple_winners">Allow Multiple Winners</string>
 
-    <string name="sharing_send_to">Send to…</string>>
+    <string name="sharing_send_to">Send to…</string>
+    <string name="initial_score">Score: 0</string>
+    <string name="initial_game_time">Game Time: 00:00</string>
+    <string name="initial_time_left">Time Left: 00.00</string>>
 </resources>
