--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,5 +144,6 @@
     <string name="sharing_send_to">Send to…</string>
     <string name="initial_score">Score: 0</string>
     <string name="initial_game_time">Game Time: 00:00</string>
-    <string name="initial_time_left">Time Left: 00.00</string>>
+    <string name="initial_time_left">Time Left: 00.00</string>
+    <string name="other_players_title">Other Players</string>>
 </resources>
